fix: forca charset UTF-8 no metodo atualizarCartaConsultaCorpo